Fix link jumping for nav bar

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Poppins, Roboto', 'DM Sans', sans-serif;
-    border: red solid 1px;
+    /* border: red solid 1px; */
     color: var(--text);
     box-sizing: border-box;
 }
@@ -163,5 +163,9 @@ body {
     cursor: pointer;
 }
 
-
+#about, 
+#projects, 
+#contact {
+    scroll-margin-top: 8.5rem;
+}
 
